# everscale-client-dotnet-bridge

./: .gitignore  CMakeLists.txt  build.bat  build.sh  readme.md
.github/workflows/: build.yml  release.yml
cmake-modules/: FindTON.cmake
src/: CMakeLists.txt
